k8s/apps/gitops/drone/deploy-tmate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tmate
  name: tmate
  namespace: gitops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tmate
  template:
    metadata:
      labels:
        app: tmate
    spec:
      volumes:
        - name: ssh-keys
          secret:
            secretName: doppler-ssh-keys
      containers:
        - image: tmate/tmate-ssh-server
          name: tmate
          ports:
            - containerPort: 2200
              name: ssh
          volumeMounts:
            - mountPath: /etc/ssh-keys
              name: ssh-keys
          securityContext:
            capabilities:
              add: [SYS_ADMIN] # needed to spawn containers (CLONE_NEWPID, etc.)
---
kind: Service
apiVersion: v1
metadata:
  name: tmate
  namespace: gitops
spec:
  selector:
    app: tmate
  ports:
    - port: 2200
      name: ssh
